Regression: User interface graphic artefacts during cycles render #108120

Closed
opened 2023-05-21 15:01:31 +02:00 by Iliya Katushenock · 6 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 527.56

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, hash: 893bd37bc035
Worked: 3.5.1

this apparently broke with 0de54b84c6

Short description of error
Updating of some node editors cause graphic artefacts if it happens during cycles rendering.
Video example is attached.

image

Exact steps for others to reproduce the error

  1. Use Cycles render.
  2. Start final render.
  3. Do something with any node editor.
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 527.56 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, hash: `893bd37bc035` Worked: 3.5.1 this apparently broke with 0de54b84c6f0e64e145db2356048fea63a734da9 **Short description of error** Updating of some node editors cause graphic artefacts if it happens during cycles rendering. Video example is attached. ![image](/attachments/07ca84e9-8df5-48f7-ab45-c830cac7fabc) **Exact steps for others to reproduce the error** 1. Use Cycles render. 2. Start final render. 3. Do something with any node editor.
Iliya Katushenock added
Module
Viewport & EEVEE
Interest
User Interface
and removed
Module
User Interface
labels 2023-05-21 15:34:21 +02:00
Iliya Katushenock added this to the 3.6 LTS milestone 2023-05-21 18:43:15 +02:00
Member

I am not sure if this has been triaged correctly. I would expect that this has been confirmed by someone to be reproducable. and performing a bisect. This points better to which module should take ownership of this issue.

Also not sure why this was marked a high priority by the reported. Perhaps it was discussed, but I don't see any paper trail.

I am not sure if this has been triaged correctly. I would expect that this has been confirmed by someone to be reproducable. and performing a bisect. This points better to which module should take ownership of this issue. Also not sure why this was marked a high priority by the reported. Perhaps it was discussed, but I don't see any paper trail.
Member

I can reproduce as well (and will do a quick bisect).
In my case, I am getting a completely black node editor until rendering finishes.

I am not sure if this has been triaged correctly. I would expect that this has been confirmed by someone to be reproducable. and performing a bisect. This points better to which module should take ownership of this issue.

Also not sure why this was marked a high priority by the reported. Perhaps it was discussed, but I don't see any paper trail.

I do think though that this has been triaged correctly, it was reproduced, it was checked that this is a recent regression (and that alone makes it a high priority issue), doing bisects sort of became a good habit by the triaging team (it is not mandatory though to have a report triaged correctly).

I can reproduce as well (and will do a quick bisect). In my case, I am getting a completely black node editor until rendering finishes. > I am not sure if this has been triaged correctly. I would expect that this has been confirmed by someone to be reproducable. and performing a bisect. This points better to which module should take ownership of this issue. > > Also not sure why this was marked a high priority by the reported. Perhaps it was discussed, but I don't see any paper trail. I do think though that this has been triaged correctly, it was reproduced, it was checked that this is a recent regression (and that alone makes it a high priority issue), doing bisects sort of became a good habit by the triaging team (it is not mandatory though to have a report triaged correctly).
Member

For me, this broke with 0de54b84c6

CC @JacquesLucke ^^

For me, this broke with 0de54b84c6f0e64e145db2356048fea63a734da9 CC @JacquesLucke ^^
Philipp Oeser removed the
Interest
User Interface
label 2023-05-24 11:46:54 +02:00
Member

Will leave it up to the modules to decide who is responsible.

Will leave it up to the modules to decide who is responsible.
Member

Pretty sure it's caused by https://projects.blender.org/blender/blender/src/branch/main/source/blender/editors/space_node/node_draw.cc#L3408
I'll have a closer look. That was introduced because baking might change data that is read during node editor drawing.

Pretty sure it's caused by https://projects.blender.org/blender/blender/src/branch/main/source/blender/editors/space_node/node_draw.cc#L3408 I'll have a closer look. That was introduced because baking might change data that is read during node editor drawing.
Jacques Lucke self-assigned this 2023-05-24 12:07:50 +02:00
Member

@JacquesLucke this can introduce the mentioned artifacts.
Not sure if baking or displaying could work on a localized copy and flush when frame finished?

Note I change the Module to Nodes&Physics for clarity. If you need any help, let us know!

@JacquesLucke this can introduce the mentioned artifacts. Not sure if baking or displaying could work on a localized copy and flush when frame finished? Note I change the Module to Nodes&Physics for clarity. If you need any help, let us know!
Jeroen Bakker added
Module
Nodes & Physics
and removed
Module
Viewport & EEVEE
labels 2023-05-24 18:36:50 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-25 12:35:39 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108120
No description provided.